--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@types/node": "12.7.4",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
-    "fast-check": "^1.16.3",
+    "fast-check": "1.17.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
